[package]
name = "git-digger"
version = "0.1.9"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Helper library to handle multiple git repositories"
keywords = ["web"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/git-digger/"

[dependencies]
log = "0.4"
once_cell = "1.18.0"
regex = "1.9.3"
ureq = "3.1.2"
