[package]
name = "git-digger"
version = "0.2.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Helper library to handle multiple git repositories"
keywords = ["web"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/git-digger/"

[dependencies]
env_logger = "0.11.10"
log = "0.4"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
ureq = "3.3.0"

[dev-dependencies]
tempfile = "3.27.0"
